--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Full Stack, Lazy Stack</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="How does 'full stack engineering' fit with Drupal?">
+		<meta name="author" content="Sam Boyer">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -37,12 +37,17 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-        <h1>Fat Stack, Lazy Stack</h1>
-					<h3>When your stack gives up</h3>
+        <h1>Full Stack, Lazy Stack</h1>
 					<p>
 						<small>Sam Boyer <a href="http://twitter.com/sdboyer">@sdboyer</a></small>
 					</p>
-				</section>
+        <aside class="notes">
+        Hi everybody, my name is...
+        Title of my talk is...
+        In talking about Full Stack Engineering, it's important to recognize the difference between the sort of full stack we like - trim, tight, and focused - and a full stack that's lazy.
+        So that's what I'm gonna do. And I'm gonna do it by picking on Drupal.
+        </aside>
+        </section>
           <section>
           <h2>Me</h2>
           <ul>
@@ -51,7 +56,7 @@
             <li>Architect of the drupal.org Git hosting platform</li>
             <li>Co-lead of a Drupal 8 initiative</li>
             <li>DevOps zealot</li>
-            <li>Also, guy who really needs a break from Drupal</li>
+            <li class="fragment">And probably, a guy who really needs a break from Drupal</li>
           </ul>
           </section>
 
@@ -59,9 +64,11 @@
 					<h2>Drupal</h2>
           <p>
           <ul>
-          <li>13-year old PHP framlication/CMS</li>
+          <li>13-year old PHP CMS/framlication</li>
           <li>Old-school LAMP (mostly)</li>
-          <li>With javascript, tail wags the dog</li>
+          <li>About 2% of all websites run it</li>
+          <li>Can run small to very big sites</li>
+          <li>Ginormous community</li>
           </ul>
 					</p>
 
@@ -69,15 +76,19 @@
           <ul>
             <li>Drupal is a traditional server-side LAMP application</li>
             <li>While it can technically run on PostgreSQL or SQLite, mysql/maria is the 98.5% use case</li>
-            <li>jQuery, jQuery UI come packaged; core ships with JS extensions to make it easier to work with Drupal's pseudo-apis</li>
-            <li>Every major release breaks backwards compatibility - an attempt to keep things spry.</li>
             <li>Community is ginormous. Some 25k modules (code extensions), 2k themes (in the old-school visual design, "skinning" sense)</li>
-            <li>Simplest way to understand Drupal the split-mind/use case: (almost) it's not a real thing until a clickable configuration option has been created.</li>
           </ul>
 					</aside>
           </section>
           <section>
           <h2>By strict definition, Drupal is a "full stack" application...</h2>
+          <aside class="notes">
+          <ul>
+            <li>jQuery, jQuery UI come packaged; core ships with JS extensions to make it easier to work with Drupal's pseudo-apis</li>
+            <li>Every major release breaks backwards compatibility - an attempt to keep things spry.</li>
+            <li>Simplest way to understand Drupal the split-mind/use case: (almost) it's not a real thing until a clickable configuration option has been created.</li>
+          </ul>
+          </aside>
           </section>
           <section>
           <h2>But really, it's more "lazy" than "full."</h2>
@@ -87,8 +98,92 @@
           </section>
 
           <section>
+            <h2>Full stack? Lazy stack?</h2>
+          </section>
           <section>
-          <h2>KNOW YOUR USE CASE</h2>
+            <h2>Let's break it down</h2>
+          </section>
+
+          <section>
+          <section>
+          <h2>PART ONE: LAYERS!</h2>
+          <aside class="notes">
+          <p>
+          Layers - the heart of FSE. They are the pieces of the stack. What can we say for Drupal? Well, it *has* a stack. jQuery, PHP, MySQL. In D8, a teensie bit of backbone, and a REST interface to content.
+
+          </p>
+          </aside>
+          </section>
+          <section>
+          <h3>Full-stack-ish layers</h3>
+          <p>TODO - image!</p>
+          <aside class="notes">
+          <p>Now, full stacks are looking increasingly diverse today, but this is still a roughly good picture.
+          There's the client end, where you may see a frontend framework (or not), and some of what's traditionally serverside might have scooted up there, too.
+          Then there's the serverside, which has a bunch of stuff we're all accustomed to seeing - models and business logic, sessions, routing, an ORM or DBAL of some kind.
+          And then finally, the persistence layers, with varying degrees of volatility and canonicality.
+
+          The specifics here vary, but most web applications have to answer something like this set of questions.
+          </p>
+          </aside>
+          </section>
+          <section>
+          <h3>Drupal's layers</h3>
+          <p>TODO - image!</p>
+          <aside class="notes">
+          Drupal works from the middle, dictating most of the other layers. Everything in the middle section is bundled in and only some are "swappable".
+
+          It significantly dictates output formats, making it harder to swap in a frontend framework. Only the most experienced Drupallers are now experimenting with Angular-driven frontends.
+          It is, for most practical purposes, incompatible with NoSQL backends for persistent storage. Again, only the most advanced have done it with much success.
+          A lot of the time, this is fine. But proper FSEs will start chafing at this sooner or later.
+          </aside>
+          </section>
+          <section>
+          <h3>Modules and hooks: Drupal's stack-smoosher</h3>
+          <aside class="notes">
+          Drupal's extensions are called "modules." They are generic, meaning they all can be installed in the same way. This is good.
+          However, they also generic, meaning they all have equal access to the same mechanisms for mutating behavior and state. This is bad.
+          The extensive control afforded to modules means that Drupal has gravitated towards, and built itself around, giant anonymous dicts/hashes/arrays of data and instructions as its primary way of doing shit.
+          So, kinda like LISP, except with a shitty, shitty datastructure instead of a first-class one. And in PHP. Win.
+          </aside>
+          </section>
+          <section>
+          <h3>Lazy stacks create bizarre problems (and knowledge)</h3>
+          <aside class="notes">
+          Features. Oh god, features. Since the very structure of a Drupal instance is at least partially tracked in the database - including content types, fields, and other major systems...
+          Features is a way of "exporting" it to code. But because it wasn't code in the first place, it gets UGLY. Updates? Changes made in the UI that aren't yet reflected in code? Changes to datastructures from upstream?
+
+          A lazy stack takes you off the beaten path. You can't even see how wider, conventional wisdom applies to the situation because it's all so obscured. It makes you *learn irrelevant stuff*. 
+          </aside>
+          </section>
+          <section>
+          <h3>Drupal 8 improves some of this...</h3>
+          <h3 class="fragment">But we still really like letting everything bleed together.</h3>
+          <aside class="notes">
+          This is improved in D8 - we've finally come around to an idea of "plugins," which participate in formal contracts to solve specific problems (caching, entities).
+
+          Of course, we've also conflated all that together. Entities are Plugins. And Config entities are all three.
+          </aside>
+          </section>
+          <section>
+          <h3>Lazy stacks can create interesting problems</h3>
+          <aside class="notes">
+          On the plus side, lazy stacks can create interesting problems, complex programming challenges.
+          So, while getting something done in Drupal core can be difficult for other reasons, it is a good place to sharpen your skills.
+
+          yammer about my rewrite of the way core assets work.
+          1. multiple actors, not aware of each other, that each need to register CSS/JS assets for delivery
+          2. need to get them all in the right order
+          3. need to aggregate them for optimal frontend performance
+          4. ideally, should aggregate with global optimality in mind...but...
+
+          all of this leads to a conclusion.
+          </aside>
+          </section>
+          </section>
+          <section>
+          <section>
+          <h2>PART TWO: KNOW YOUR USE CASE</h2>
           </section>
           <section>
           <h3>Full stack engineering starts long before keystrokes hit vim</h3>
@@ -130,7 +225,7 @@
           <h3>So, what is Drupal's use case?</h3>
           <aside>
           <p>
-          Answer: nobody knows. Anything, and nothing. For a web framework, this is fine. For a CMS, it's less fine.
+          Answer: nobody knows. Anything, and nothing. For a web framework, this is mostly fine. For a CMS, it's way less fine.
           Again, Drupal's niche is figuring helping you figure out your use case as you go along. In a way, it's kinda a great prototyping rule. Or, it would be, if it didn't take a relaive expert to know what aspects of the prototype were relevant, and what weren't.
           </p>
           </aside>
@@ -138,41 +233,16 @@
           </section>
 
           <section>
-          <section>
-          <h2>LAYERS ONLY HELP IF YOU KNOW THEM</h2>
+          <h2>YOUR STACK IS SUSPECT</h2>
           <aside class="notes">
-          <p>
-          The heart of FSE. What can we say for Drupal? Well, it *has* a stack. jQuery, PHP, MySQL. In D8, a teensie bit of backbone, and a REST interface to content.
-          </p>
-          </aside>
-          </section>
-          <section>
-          <h3>Full-stack-ish layers</h3>
-          <p>TODO - image!</p>
-          <aside class="notes">
-          <p>Now, full stacks are looking increasingly diverse today, but this is still a roughly good picture.
-          There's the client end, where you may see a frontend framework (or not), and some of what's traditionally serverside might have scooted up there, too.
-          Then there's the serverside, which has a bunch of stuff we're all accustomed to seeing - models and business logic, sessions, routing, an ORM or DBAL of some kind.
-          And then finally, the persistence layers, with varying degrees of volatility and canonicality.
+          Drupal is guilty of many poor practices. But it's generally true that *any* system you work with is going to mislead you, at least a bit.
 
-          The specifics here vary, but most web applications have to answer something like this set of questions.
-          </p>
+          So, part of your job as a full-stack developer is to keep an eye on the difference between the standards and what you're actually doing.
+          Otherwise, the quality of your current project will suffer, as will your ability to work in other stacks.
           </aside>
           </section>
           <section>
-          <h3>Drupal's layers</h3>
-          <p>TODO - image!</p>
-          <aside class="notes">
-          Drupal works from the middle, dictating most of the other layers. Everything in the middle section is bundled in and only some are "swappable".
-
-          It significantly dictates output formats, making it harder to swap in a frontend framework. Only the most experienced Drupallers are now experimenting with Angular-driven frontends.
-          It is, for most practical purposes, incompatible with NoSQL backends for persistent storage. Again, only the most advanced have done it with much success.
-          A lot of the time, this is fine. But proper FSEs will start chafing at this sooner or later.
-          </aside>
-          </section>
-          <section>
-            <h3></h3>
-          </section>
+            TODO - graph of thinger
           </section>
 
 				<!-- Example of nested vertical slides -->
@@ -478,13 +548,15 @@ function linkify( selector ) {
 			// Full list of configuration options available here:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
+				controls: false,
 				progress: true,
 				history: true,
-				center: true,
+        center: true,
+        transition: 'none',
 
-				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+        theme: 'solarized', // available themes are in /css/theme
+
+        margin: 0,
 
 				// Parallax scrolling
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
